tests/golden/snapshots/render_scaffolders_matrix__account_config_numbers.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct Config {
    pub fee_bps: u16,
    pub bump: u8,
}
// === sunscreen:auto-generated:end segment=file ===
