tests/golden/snapshots/render_scaffolders_matrix__account_governance_vote.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct GovernanceVote {
    pub proposal: Pubkey,
    pub voter: Pubkey,
    pub choice: u8,
}
// === sunscreen:auto-generated:end segment=file ===
