tests/golden/snapshots/render_scaffolders_matrix__account_market_state.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct MarketState {
    pub asset: Pubkey,
    pub quote_mint: Pubkey,
    pub paused: bool,
}
// === sunscreen:auto-generated:end segment=file ===
