tests/golden/snapshots/render_scaffolders_matrix__account_mod_entry_user_profile.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod user_profile;
pub use user_profile::*;
