tests/golden/snapshots/render_scaffolders_matrix__account_mod_entry_vault.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod vault;
pub use vault::*;
