tests/golden/snapshots/render_scaffolders_matrix__account_mod_segment_single.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod config;
pub use config::*;
