tests/golden/snapshots/render_scaffolders_matrix__account_mod_segment_sorted.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
pub mod treasury;
pub use treasury::*;
pub mod user_profile;
pub use user_profile::*;
pub mod vault;
pub use vault::*;
