tests/golden/snapshots/render_scaffolders_matrix__account_nft_record.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct NftRecord {
    pub mint: Pubkey,
    pub uri: String,
    pub royalty_bps: u16,
}
// === sunscreen:auto-generated:end segment=file ===
