tests/golden/snapshots/render_scaffolders_matrix__account_order_book.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct OrderBook {
    pub next_order_id: u128,
    pub depth: u32,
}
// === sunscreen:auto-generated:end segment=file ===
