tests/golden/snapshots/render_scaffolders_matrix__account_user_profile_casing.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct UserProfile {
    pub display_name: String,
    pub owner_pubkey: Pubkey,
}
// === sunscreen:auto-generated:end segment=file ===
